# snakepit

./: .gitignore  AGENTS.md  AUTOMATION_COMPLETE.md  AUTONOMOUS_AI.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  Cargo.toml  DAEMON.md  FINAL_STATUS.md  GITHUB_PUSH_SUMMARY.md  GITHUB_READY.md  GITHUB_UPLOAD.md  GUI_README.md  INDEX_INSTALLSNAKE.md  INSTALLATION.md  INSTALLSNAKE.md  INSTALLSNAKE_SUMMARY.md  INSTALL_NOW.txt  LICENSE  QUICK_START.md  README.md  README_VISUAL.md  RENDERING_OPTIMIZATION.md  SECURITY.md  SECURITY_FEATURES.md  SHELL_INTEGRATION_CHANGELOG.md  SHELL_QUICK_REF.md  VISUAL_SETUP.md  allaboutsnakepit.txt  build_log.txt  check-vulnerabilities.sh  check_output.txt  check_output_2.txt  check_output_3.txt  deny.toml  install-daemon.sh  install-resolver.sh  install-routing.sh  install-visual.sh  (+21 more)
.github/: dependabot.yml
benchmarks/: benchmark.py  benchmark_from_hell.py  stress_test.py
docs/: ALL_INSTALLATION_METHODS.md  DAEMON.md  DEPENDENCY_RESOLVER.md  ENGINE_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPROVED_ENGINE_SUMMARY.md  PATHFINDING_FIX.md  QUICKSTART.md  QUICKSTART_GAME.md  QUICK_REFERENCE.md  README.md  RESOLVER_COMPLETE.md  ROUTING_README.md  ROUTING_SETUP.md  SHELL_INTEGRATION.md  SMART_SNAKEPIT_README.md  SMOOTH_RENDERING.md  USER_GUIDE.md
examples/: basic_usage.md  run_game.sh
report_chapters/: 00_title_and_toc.md  01_chapter_1_part1.md  01_chapter_1_part2.md  02_chapter_2.md  03_chapter_3_part1.md  04_chapter_4_part1.md  04_chapter_4_part2.md  04_chapter_4_part3.md  05_chapter_5_part1.md  06_chapter_6_part1.md  (+6 more)
(+53 files in other folders)
