[package]
name = "snakepit"
version = "0.1.0"
edition = "2021"
authors = ["adminx"]
description = "A dynamic Rust-based Python dependency installer"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
indicatif = "0.17"
console = "0.15"
regex = "1.10"
semver = "1.0"
notify = "6.1"
sysinfo = "0.30"
signal-hook = "0.3"
signal-hook-tokio = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
