[package]
name = "snakepit"
version = "0.2.0"
edition = "2021"
authors = ["adminx"]
description = "A dynamic Rust-based Python dependency installer"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
semver = "1.0"
sysinfo = "0.30"
signal-hook = "0.3"
signal-hook-tokio = "0.3"
zip = "0.6"
flate2 = "1.0"
rayon = "1.8"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
snakegg = { path = "snakegg" }
